--- a/Videos/Clix_Team_Selector_Chapter_3/index.html
+++ b/Videos/Clix_Team_Selector_Chapter_3/index.html
@@ -220,121 +220,91 @@
       <!-- ============================== DEVICES ============================== -->
       <section>
         <!-- ========== SETTINGS 1 ========== -->
-        <section class="devices-sec1" id="settings1">
-          <div class="scroll-left">
-            <ion-icon name="chevron-back-outline"></ion-icon>
-          </div>
-
-          <h2>Game Start (Black Box)</h2>
-          <div class="sec-devices">
-            <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
-            <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
-            <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
-            <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="2" class="MUTATOR-ZONE"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="3" class="MUTATOR-ZONE"></div>
-          </div>
-
-          <div class="scroll-right">
-            <ion-icon name="chevron-forward-outline"></ion-icon>
+        <section class="settings-section light" id="settings1">
+          <div class="section-wrapper">
+            <h2 class="section-title">Game Start (Black Box)</h2>
+            <div class="section-devices">
+              <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
+              <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
+              <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
+              <div id="" data-channel="1" class="PLAYER-SPAWN-PAD"></div>
+              <div class="dividor dark"></div>
+              <div id="" data-channel="2" class="MUTATOR-ZONE"></div>
+              <div class="dividor dark"></div>
+              <div id="" data-channel="3" class="MUTATOR-ZONE"></div>
+            </div>
           </div>
         </section>
 
         <!-- ========== SETTINGS 2 ========== -->
-        <section class="devices-sec2" id="settings2">
-          <div class="scroll-left">
-            <ion-icon name="chevron-back-outline"></ion-icon>
-          </div>
-
-          <h2>Loadout Selecting Area</h2>
-          <div class="sec-devices">
-            <div id="" data-channel="1" class="TELEPORTER"></div>
-            <div id="" data-channel="1" class="TELEPORTER"></div>
-            <div id="" data-channel="1" class="TELEPORTER"></div>
-            <div id="" data-channel="1" class="TELEPORTER"></div>
-          </div>
-
-          <div class="scroll-right">
-            <ion-icon name="chevron-forward-outline"></ion-icon>
+        <section class="settings-section dark" id="settings2">
+          <div class="section-wrapper">
+            <h2 class="section-title">Loadout Selecting Area</h2>
+            <div class="section-devices">
+              <div id="" data-channel="1" class="TELEPORTER"></div>
+              <div id="" data-channel="1" class="TELEPORTER"></div>
+              <div id="" data-channel="1" class="TELEPORTER"></div>
+              <div id="" data-channel="1" class="TELEPORTER"></div>
+            </div>
           </div>
         </section>
 
         <!-- ========== SETTINGS 3 ========== -->
-        <section class="devices-sec1" id="settings3">
-          <div class="scroll-left">
-            <ion-icon name="chevron-back-outline"></ion-icon>
-          </div>
-
-          <h2>Game Manager</h2>
-          <div class="sec-devices">
-            <div id="" data-channel="1" class="ROUND-SETTINGS"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="2" class="TRIGGER">CH 11</div>
-            <div class="dividor"></div>
-            <div id="" data-channel="3" class="ROUND-SETTINGS"></div>
-            <div id="" data-channel="4" class="ROUND-SETTINGS"></div>
-            <div id="" data-channel="5" class="ROUND-SETTINGS"></div>
-            <div id="" data-channel="6" class="ROUND-SETTINGS"></div>
-          </div>
-
-          <div class="scroll-right">
-            <ion-icon name="chevron-forward-outline"></ion-icon>
+        <section class="settings-section light" id="settings3">
+          <div class="section-wrapper">
+            <h2 class="section-title">Game Manager</h2>
+            <div class="section-devices">
+              <div id="" data-channel="1" class="ROUND-SETTINGS"></div>
+              <div class="dividor dark"></div>
+              <div id="" data-channel="2" class="TRIGGER">CH 11</div>
+              <div class="dividor dark"></div>
+              <div id="" data-channel="3" class="ROUND-SETTINGS"></div>
+              <div id="" data-channel="4" class="ROUND-SETTINGS"></div>
+              <div id="" data-channel="5" class="ROUND-SETTINGS"></div>
+              <div id="" data-channel="6" class="ROUND-SETTINGS"></div>
+            </div>
           </div>
         </section>
 
         <!-- ========== SETTINGS 4 ========== -->
-        <section class="devices-sec2" id="settings4">
-          <div class="scroll-left">
-            <ion-icon name="chevron-back-outline"></ion-icon>
-          </div>
-
-          <h2>Team Selecting Area</h2>
-          <div class="sec-devices">
-            <div id="" data-channel="1" class="BARRIER"></div>
-            <div id="" data-channel="2" class="BARRIER"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="3" class="TELEPORTER"></div>
-            <div id="" data-channel="3" class="TELEPORTER"></div>
-            <div id="" data-channel="3" class="TELEPORTER"></div>
-            <div id="" data-channel="3" class="TELEPORTER"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="4" class="PLAYER-COUNTER"></div>
-            <div id="" data-channel="5" class="PLAYER-COUNTER"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="6" class="SWITCH"></div>
-            <div id="" data-channel="7" class="SWITCH"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="8" class="TIMER"></div>
-            <div id="" data-channel="9" class="CLASS-SELECTOR"></div>
-            <div id="" data-channel="10" class="CLASS-SELECTOR"></div>
-          </div>
-
-          <div class="scroll-right">
-            <ion-icon name="chevron-forward-outline"></ion-icon>
+        <section class="settings-section dark" id="settings4">
+          <div class="section-wrapper">
+            <h2 class="section-title">Team Selecting Area</h2>
+            <div class="section-devices">
+              <div id="" data-channel="1" class="BARRIER"></div>
+              <div id="" data-channel="2" class="BARRIER"></div>
+              <div class="dividor light"></div>
+              <div id="" data-channel="3" class="TELEPORTER"></div>
+              <div id="" data-channel="3" class="TELEPORTER"></div>
+              <div id="" data-channel="3" class="TELEPORTER"></div>
+              <div id="" data-channel="3" class="TELEPORTER"></div>
+              <div class="dividor light"></div>
+              <div id="" data-channel="4" class="PLAYER-COUNTER"></div>
+              <div id="" data-channel="5" class="PLAYER-COUNTER"></div>
+              <div class="dividor light"></div>
+              <div id="" data-channel="6" class="SWITCH"></div>
+              <div id="" data-channel="7" class="SWITCH"></div>
+              <div class="dividor light"></div>
+              <div id="" data-channel="8" class="TIMER"></div>
+              <div id="" data-channel="9" class="CLASS-SELECTOR"></div>
+              <div id="" data-channel="10" class="CLASS-SELECTOR"></div>
+            </div>
           </div>
         </section>
 
         <!-- ========== SETTINGS 5 ========== -->
-        <section class="devices-sec1" id="settings5">
-          <div class="scroll-left">
-            <ion-icon name="chevron-back-outline"></ion-icon>
-          </div>
-
-          <h2>Fighting/Playing Area</h2>
-          <div class="sec-devices">
-            <div id="" data-channel="1" class="TELEPORTER"></div>
-            <div id="" data-channel="2" class="TELEPORTER"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="3" class="TELEPORTER"></div>
-            <div id="" data-channel="4" class="TELEPORTER"></div>
-            <div class="dividor"></div>
-            <div id="" data-channel="5" class="MUTATOR-ZONE"></div>
-          </div>
-
-          <div class="scroll-right">
-            <ion-icon name="chevron-forward-outline"></ion-icon>
+        <section class="settings-section light" id="settings5">
+          <div class="section-wrapper">
+            <h2 class="section-title">Fighting/Playing Area</h2>
+            <div class="section-devices">
+              <div id="" data-channel="1" class="TELEPORTER"></div>
+              <div id="" data-channel="2" class="TELEPORTER"></div>
+              <div class="dividor dark"></div>
+              <div id="" data-channel="3" class="TELEPORTER"></div>
+              <div id="" data-channel="4" class="TELEPORTER"></div>
+              <div class="dividor dark"></div>
+              <div id="" data-channel="5" class="MUTATOR-ZONE"></div>
+            </div>
           </div>
         </section>
       </section>
@@ -373,7 +343,7 @@
       </section>
 
       <!-- ========== AD ========== -->
-      <section>
+      <section class="AD">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
         <!-- Video Horizontal Ad Unit -->
         <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
@@ -388,6 +358,10 @@
           <h2>Island Settings</h2>
           <div>
             <h3>TOTAL ROUNDS</h3>
+            <span>5</span>
+          </div>
+          <div>
+            <h3>TEAMS</h3>
             <span>3</span>
           </div>
         </div>
@@ -395,11 +369,7 @@
           <h2>Game Settings</h2>
           <div>
             <h3>TIME LIMIT</h3>
-            <span>10 MINUTES</span>
-          </div>
-          <div>
-            <h3>ELIMINATIONS TO END</h3>
-            <span>20</span>
+            <span>NONE</span>
           </div>
         </div>
       </section>
