--- a/Videos/index.html
+++ b/Videos/index.html
@@ -233,41 +233,37 @@
       </div>
 
       <section class="content">
-        <section class="ad-container-desktop">
+        <section class="ads-container">
           <div>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Videos Page 1st left side -->
-            <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="2302747017" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <!-- Display Ad -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
           </div>
-
-          <div class="filler"></div>
-
+          <div></div>
           <div>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Videos Page 2nd left side -->
-            <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="1289596980" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <!-- Display Ad -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
           </div>
-
-          <div class="filler"></div>
-
+          <div></div>
           <div>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Videos Page 3rd left side -->
-            <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8349991051" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <!-- Display Ad -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
           </div>
         </section>
 
-        <section>
-          <div class="videos-grid">
+        <div class="videos-container">
+          <section class="videos-grid">
             <div class="video">
               <a href="/Videos/Headshot_Only_Gamemode">
                 <img loading="lazy" src="/Thumbnails/Headshot Only Gamemode.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -304,15 +300,6 @@
               </a>
             </div>
 
-            <div class="ad-container-mobile">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-              <!-- Video Page 1st Mobile Ad Unit -->
-              <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="6075127601" data-ad-format="auto" data-full-width-responsive="true"></ins>
-              <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
-            </div>
-
             <div class="video">
               <a href="#">
                 <img loading="lazy" src="/Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -329,6 +316,15 @@
               <a href="#">
                 <p class="video-title">How to Make Build Reset Remote</p>
               </a>
+            </div>
+
+            <div>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+              <!-- Display Ad -->
+              <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
+              <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
             </div>
 
             <div class="video">
@@ -349,15 +345,6 @@
               </a>
             </div>
 
-            <div class="ad-container-mobile">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-              <!-- Videos Page 2nd Mobile Ad Unit -->
-              <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="5546151160" data-ad-format="auto" data-full-width-responsive="true"></ins>
-              <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
-            </div>
-
             <div class="video">
               <a href="#">
                 <img loading="lazy" src="/Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -365,6 +352,15 @@
               <a href="#">
                 <p class="video-title">How to Make Team Selector Mechanic (Old)</p>
               </a>
+            </div>
+
+            <div>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+              <!-- Display Ad -->
+              <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
+              <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
             </div>
 
             <div class="video">
@@ -394,15 +390,6 @@
               </a>
             </div>
 
-            <div class="ad-container-mobile">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-              <!-- Videos Page 3rd Mobile Ad Unit -->
-              <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="1335443416" data-ad-format="auto" data-full-width-responsive="true"></ins>
-              <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
-            </div>
-
             <div class="video">
               <a href="#">
                 <img loading="lazy" src="/Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -430,6 +417,15 @@
               </a>
             </div>
 
+            <div>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+              <!-- Display Ad -->
+              <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
+              <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+            </div>
+
             <div class="video">
               <a href="#">
                 <img loading="lazy" src="/Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -437,15 +433,6 @@
               <a href="#">
                 <p class="video-title">How to Make BHE Boxfights Map (Part 5)</p>
               </a>
-            </div>
-
-            <div class="ad-container-mobile">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-              <!-- Videos Page 4th Mobile Ad Unit -->
-              <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="4041497800" data-ad-format="auto" data-full-width-responsive="true"></ins>
-              <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
             </div>
 
             <div class="video">
@@ -466,6 +453,15 @@
               </a>
             </div>
 
+            <div>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+              <!-- Display Ad -->
+              <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
+              <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+            </div>
+
             <div class="video">
               <a href="#">
                 <img loading="lazy" src="/Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -482,15 +478,6 @@
               <a href="#">
                 <p class="video-title">How to Make BHE Boxfights Map (Part 2)</p>
               </a>
-            </div>
-
-            <div class="ad-container-mobile">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-              <!-- Videos Page 5th Mobile Ad Unit -->
-              <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9102252799" data-ad-format="auto" data-full-width-responsive="true"></ins>
-              <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
             </div>
 
             <div class="video">
@@ -529,10 +516,10 @@
               </a>
             </div>
 
-            <div class="ad-container-mobile">
+            <div>
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-              <!-- Videos Page 6th Mobile Ad Unit -->
-              <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="3770035063" data-ad-format="auto" data-full-width-responsive="true"></ins>
+              <!-- Display Ad -->
+              <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
               <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
               </script>
@@ -565,6 +552,15 @@
               </a>
             </div>
 
+            <div>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
+              <!-- Display Ad -->
+              <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
+              <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+            </div>
+
             <div class="video">
               <a href="#">
                 <img loading="lazy" src="/Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
@@ -572,15 +568,6 @@
               <a href="#">
                 <p class="video-title">How to Make BHE 1v1 Map (Part 2)</p>
               </a>
-            </div>
-
-            <div class="ad-container-mobile">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-              <!-- Videos Page 7th Mobile Ad Unit -->
-              <ins class="adsbygoogle ad-slot-mobile" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="5821483334" data-ad-format="auto" data-full-width-responsive="true"></ins>
-              <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
             </div>
 
             <div class="video">
@@ -591,36 +578,32 @@
                 <p class="video-title">How to Make BHE 1v1 Map (Part 1)</p>
               </a>
             </div>
-          </div>
-        </section>
+          </section>
+        </div>
 
-        <section class="ad-container-desktop">
+        <section class="ads-container">
           <div>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Videos Page 1st right side -->
-            <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="8293440291" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <!-- Display Ad -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
           </div>
-
-          <div class="filler"></div>
-
+          <div></div>
           <div>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Videos Page 2nd right side -->
-            <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9007756166" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <!-- Display Ad -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
           </div>
-
-          <div class="filler"></div>
-
+          <div></div>
           <div>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-            <!-- Videos Page 3rd right side -->
-            <ins class="adsbygoogle ad-slot-desktop" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="2442347818" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <!-- Display Ad -->
+            <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
