--- a/Videos/Headshot_Only_Gamemode/index.html
+++ b/Videos/Headshot_Only_Gamemode/index.html
@@ -268,8 +268,8 @@
       <!-- ========== AD ========== -->
       <section>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6373919257226739" crossorigin="anonymous"></script>
-        <!-- Video Page In-Between Ad Unit -->
-        <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="1690666631" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <!-- Display Ad -->
+        <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-6373919257226739" data-ad-slot="9497400583" data-ad-format="auto" data-full-width-responsive="true"></ins>
         <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
